# llm_science

./: .gitignore  README.md  lesson_01_bigram_char_lm.ipynb  lesson_02_bpe_and_mlp_ngram_lm.ipynb  lesson_03_gru_language_model.ipynb  lesson_04_transformer_decoder_from_scratch.ipynb  lesson_05_modern_gpt_blocks_rmsnorm_swiglu_rope.ipynb  lesson_06_kv_cache_fast_generation.ipynb  lesson_07_training_tricks_warmup_cosine_amp_accum.ipynb  lesson_08_lora_finetuning_sft.ipynb  lesson_09_quantization_inference.ipynb  lesson_10_moe_transformer_toy.ipynb  lesson_11_dpo_preference_optimization.ipynb  lesson_12_capstone_ablation_harness.ipynb  pyproject.toml  requirements.txt  tokenizer_bpe.json
