[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # =========================
    # Core LLM / Agent stack
    # =========================
    "anthropic>=0.49.0",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "semantic-kernel>=1.25.0",

    # =========================
    # ML / LLM training stack
    # =========================
    "torch>=2.1",
    "torchvision",
    "torchaudio",
    "datasets",
    "transformers",
    "tokenizers",
    "accelerate",
    "peft",
    "trl",

    # =========================
    # Data / Viz / Utils
    # =========================
    "numpy",
    "pandas",
    "matplotlib",
    "plotly>=6.0.1",
    "tqdm",
    "psutil>=7.0.0",
    "requests>=2.32.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",

    # =========================
    # Web / Scraping / Docs
    # =========================
    "bs4>=0.0.2",
    "lxml>=5.3.1",
    "wikipedia>=1.4.0",
    "playwright>=1.51.0",

    # =========================
    # PDF / Docs
    # =========================
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",

    # =========================
    # Misc / Tools
    # =========================
    "gradio>=5.22.0",
    "ipywidgets>=8.1.5",
    "polygon-api-client>=1.14.5",
    "sendgrid>=6.11.0",
    "smithery>=0.1.0",
    "speedtest-cli>=2.1.3",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "setuptools>=78.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]


[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true